--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,6 +1,9 @@
 /* Google Fonts - Neumorphism Design System */
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;600;700;800&family=DM+Sans:wght@400;500;700&display=swap');
 
+/* Google Fonts - Organic/Natural Theme */
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700;9..144,800&family=Nunito:wght@400;500;600;700&display=swap');
+
 /* LXGW Bright Font Face Declarations - Kept for Chinese text support */
 @font-face {
     font-family: "LXGW Bright";
